Fixed centered text on mobile view'

--- a/src/components/Events/UserEvents/style.scss
+++ b/src/components/Events/UserEvents/style.scss
@@ -229,10 +229,6 @@
   gap: 5px;
   margin-top: 14px;
   padding: 14px 14px;
-
-  @media (max-width: 700px) {
-    align-items: center;
-}
 }
 
 .event-title {
